Fixed Failing test due exception on file not found

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -18,20 +18,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <!--<repositories>-->
-    <!--<repository>-->
-    <!--<id>sonatype-nexus-snapshots</id>-->
-    <!--<name>Sonatype Nexus Snapshots</name>-->
-    <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-    <!--<releases>-->
-    <!--<enabled>false</enabled>-->
-    <!--</releases>-->
-    <!--<snapshots>-->
-    <!--<enabled>true</enabled>-->
-    <!--</snapshots>-->
-    <!--</repository>-->
-    <!--</repositories>-->
-
     <build>
         <plugins>
             <plugin>
@@ -164,7 +150,7 @@
         <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-distributed</artifactId>
-            <version>2.2.4-SNAPSHOT</version>
+            <version>${orientdb.version}</version>
         </dependency>
     </dependencies>
 </project>
