Added ORIENTDB_HOME in  pom.xml for testing

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -60,7 +60,9 @@
                 <configuration>
                     <systemPropertyVariables>
                         <buildDirectory>${project.build.directory}</buildDirectory>
+                        <ORIENTDB_HOME>target</ORIENTDB_HOME>
                     </systemPropertyVariables>
+
                 </configuration>
             </plugin>
             <plugin>
