--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -43,7 +43,10 @@
         </osgi.export>
         <jar.manifest.mainclass>com.orientechnologies.orient.console.OConsoleDatabaseApp</jar.manifest.mainclass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <argLine>-XX:MaxDirectMemorySize=512g</argLine>
+        <argLine>
+            -XX:MaxDirectMemorySize=512g
+            -Dmemory.directMemory.trackMode=true
+        </argLine>
     </properties>
 
     <dependencies>
