--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>orientdb-client</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 
 
         <dependency>
