--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -66,7 +66,13 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
-
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
