--- a/object/pom.xml
+++ b/object/pom.xml
@@ -66,6 +66,13 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <!-- Use an OSGi ready dependency https://hibernate.onjira.com/browse/JPA-42 -->
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
@@ -92,6 +99,12 @@
                     <excludes>
                         <exclude>${exclude.test.1}</exclude>
                     </excludes>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>com.orientechnologies.OTestNGTestLeaksListener</value>
+                        </property>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
