--- a/graphdb/pom.xml
+++ b/graphdb/pom.xml
@@ -69,6 +69,13 @@
             <artifactId>orientdb-server</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 
 
         <dependency>
