debugging log manager implemented to facilitate logging from shutdown hooks

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -43,6 +43,7 @@
         <argLine>
             -XX:MaxDirectMemorySize=512g
             -Dmemory.directMemory.trackMode=true
+            -Djava.util.logging.manager=com.orientechnologies.common.log.OLogManager$DebugLogManager
         </argLine>
     </properties>
 
