--- a/distributed/pom.xml
+++ b/distributed/pom.xml
@@ -53,6 +53,7 @@
             -Ddb.makeFullCheckpointOnIndexChange=false
             -Ddb.makeFullCheckpointOnSchemaChange=false
             -Dhazelcast.wait.seconds.before.join=3
+            -Djava.util.logging.manager=com.orientechnologies.common.log.OLogManager$DebugLogManager
         </argLine>
         <exclude.test.distributed>NONE</exclude.test.distributed>
     </properties>
