--- a/server/pom.xml
+++ b/server/pom.xml
@@ -42,6 +42,7 @@
             -Dstorage.diskCache.bufferSize=4096
             -Dsecurity.userPasswordSaltIterations=10
             -Dmemory.directMemory.trackMode=true
+            -Djava.util.logging.manager=com.orientechnologies.common.log.OLogManager$DebugLogManager
         </argLine>
     </properties>
 
