--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -31,6 +31,7 @@
             -Xmx3072m
             -XX:MaxDirectMemorySize=512g
             -Dmemory.directMemory.trackMode=true
+            -Djava.util.logging.manager=com.orientechnologies.common.log.OLogManager$DebugLogManager
         </argLine>
     </properties>
 
