--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -46,6 +46,7 @@
         <argLine>
             -XX:MaxDirectMemorySize=512g
             -Dmemory.directMemory.trackMode=true
+            -Djava.util.logging.manager=com.orientechnologies.common.log.OLogManager$DebugLogManager
         </argLine>
     </properties>
 
