updates systemd orientdb.service to avoid use of custom script, relying only on server.sh

--- a/server/script/orientdb.service
+++ b/server/script/orientdb.service
@@ -1,3 +1,7 @@
+#
+# Copyright (c) OrientDB LTD (http://http://orientdb.com/)
+#
+
 [Unit]
 Description=OrientDB Server
 After=network.target
@@ -7,10 +11,6 @@ After=syslog.target
 WantedBy=multi-user.target
 
 [Service]
-Type=forking
-User=orient
-Group=orient
-PIDFile=$ORIENTDB_HOME/bin/orient.pid
-ExecStart=$ORIENTDB_HOME/bin/orientdb-sysd.sh start
-ExecStop=$ORIENTDB_HOME/bin/orientdb-sysd.sh stop
-ExecStatus=$ORIENTDB_HOME/bin/orientdb-sysd.sh status
+User=ORIENTDB_USER
+Group=ORIENTDB_GROUP
+ExecStart=$ORIENTDB_HOME/bin/server.sh start
