--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -32,8 +32,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <surefire.version>2.18.1</surefire.version>
         <orientdb.version>${project.version}</orientdb.version>
+        <!--<lucene.version>5.5.2</lucene.version>-->
         <lucene.version>5.3.2</lucene.version>
         <geotools.version>13.2</geotools.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
