--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>com.orientechnologies</groupId>
     <artifactId>orientdb-parent</artifactId>
-    <version>2.2.8</version>
+    <version>2.2.9-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>OrientDB</name>
