backported some cleanup and more tests from develop

--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -201,6 +201,11 @@
             <artifactId>lucene-backward-codecs</artifactId>
             <version>${lucene.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-suggest</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>net.sf.opencsv</groupId>
