--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -33,7 +33,7 @@
 
     <properties>
         <orientdb.version>${project.version}</orientdb.version>
-        <lucene.version>5.5.2</lucene.version>
+        <lucene.version>6.0.1</lucene.version>
         <!--<lucene.version>5.3.2</lucene.version>-->
         <geotools.version>13.2</geotools.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -174,6 +174,11 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queries</artifactId>
             <version>${lucene.version}</version>
         </dependency>
         <dependency>
