--- a/test-commons/pom.xml
+++ b/test-commons/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>assertj-core</artifactId>
             <version>3.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>2.4</version>
+        </dependency>
 
     </dependencies>
 </project>
