replaced testng listener with junit listener in object tests

--- a/object/pom.xml
+++ b/object/pom.xml
@@ -108,7 +108,7 @@
                     <properties>
                         <property>
                             <name>listener</name>
-                            <value>com.orientechnologies.OTestNGTestLeaksListener</value>
+                            <value>com.orientechnologies.OJUnitTestLeaksListener</value>
                         </property>
                     </properties>
                 </configuration>
