--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -142,7 +142,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>${argLine} -Xmx2G -XX:MaxDirectMemorySize=1024g</argLine>
+                    <argLine>${argLine} -Xmx2G</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -159,7 +159,7 @@
                 <configuration>
                     <forkedProcessTimeoutInSeconds>0</forkedProcessTimeoutInSeconds>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>${argLine} -Xmx2G -XX:MaxDirectMemorySize=1024g</argLine>
+                    <argLine>${argLine} -Xmx2G</argLine>
                     <reuseForks>false</reuseForks>
                     <excludes>
                         <!-- there is a bug on greemlin groovy tests, we shall revisit this after TINKERPOP3-984 is release -->
