--- a/server/script/orientdb.service
+++ b/server/script/orientdb.service
@@ -13,4 +13,4 @@ WantedBy=multi-user.target
 [Service]
 User=ORIENTDB_USER
 Group=ORIENTDB_GROUP
-ExecStart=$ORIENTDB_HOME/bin/server.sh start
+ExecStart=$ORIENTDB_HOME/bin/server.sh
