--- a/object/pom.xml
+++ b/object/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.2.10-SNAPSHOT</version>
+        <version>2.2.10</version>
     </parent>
 
     <artifactId>orientdb-object</artifactId>
