--- a/test-commons/pom.xml
+++ b/test-commons/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>orientdb-parent</artifactId>
         <groupId>com.orientechnologies</groupId>
-        <version>2.2.10</version>
+        <version>2.2.11-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
