tune for rultor

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -3,4 +3,4 @@ release:
     - mpollmeier
     - velo
   script: |
-    mvn clean deploy -f driver/pom.xml -Prelease -DskipTests
+    mvn clean deploy -f driver/pom.xml -Prelease -DskipTests -B
