- Public Issue Mute Configuration - Login Impossible for Not Registered Users - Some minor UI Improvements

--- a/orientechnologies-website/src/main/resources/github-development.properties
+++ b/orientechnologies-website/src/main/resources/github-development.properties
@@ -5,4 +5,5 @@ github.authorizeRedirect = http://localhost:8080/github/authorize
 github.accessRedirect = http://localhost:8080/github/access_token
 github.mock = true
 github.api = http://localhost:${port}/api/v1/github/mock
-
+#github.mock = false
+#github.api = https://api.github.com
