--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.2.11-SNAPSHOT</version>
+        <version>2.2.11</version>
     </parent>
 
     <artifactId>orientdb-server</artifactId>
