--- a/.rultor.yml
+++ b/.rultor.yml
@@ -3,9 +3,9 @@ docker:
   image: yegor256/java8
 
 decrypt:
-  settings.xml: "repo/.rultor/settings.xml.asc"
-  pubring.gpg: "repo/.rultor/pubring.gpg.asc"
-  secring.gpg: "repo/.rultor/secring.gpg.asc"
+  settings.xml: "repo/settings.xml.asc"
+  pubring.gpg: "repo/pubring.gpg.asc"
+  secring.gpg: "repo/secring.gpg.asc"
 
 release:
   commanders:
