rultor: try jcabi parent pom

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -12,4 +12,4 @@ release:
     - mpollmeier
     - velo
   script: |
-    mvn clean deploy -f driver/pom.xml -Prelease -DskipTests -B --settings /home/r/settings.xml
+    mvn clean deploy -f driver/pom.xml -DskipTests -B --settings /home/r/settings.xml
