try to fix travis
error was: [ERROR] Failed to execute goal org.eluder.coveralls:coveralls-maven-plugin:4.0.0:report (default) on project orientdb-gremlin: Processing of input or output data failed: Unable to parse timestamp "2016-10-14T22:30:28": Unparseable date: "2016-10-14T22:30:28" ->

--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -136,6 +136,8 @@
                 <configuration>
                     <skip>${skipTests}</skip>
                     <repoToken>VydEbanRpaocFLETAHcF2qUZohD4tXJ6e</repoToken>
+                    <timestampFormat>yyyy-MM-dd'T'HH:mm:ss</timestampFormat>
+                    <!-- <failOnServiceError>false</failOnServiceError> -->
                 </configuration>
             </plugin>
             <plugin>
