allow forking in failsave plugin again to fix NoClassDefFound
java.lang.NoClassDefFoundError: Could not initialize
class com.orientechnologies.orient.core.db.ODatabaseRecordThreadLocal

--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -160,6 +160,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <forkCount>1</forkCount>
                     <forkedProcessTimeoutInSeconds>0</forkedProcessTimeoutInSeconds>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <argLine>${argLine} -Xmx2G</argLine>
