updated with new mail config

--- a/orientechnologies-website/src/main/resources/mail-production.properties
+++ b/orientechnologies-website/src/main/resources/mail-production.properties
@@ -1,12 +1,12 @@
 mail.protocol=smtp
-mail.host=smtp.gmail.com
-mail.port=587
-mail.smtp.auth=true
+mail.host=192.168.1.230
+mail.port=25
+mail.smtp.auth=false
 mail.smtp.starttls.enable=true
-mail.smtp.host=smtp.gmail.com
-mail.smtp.port=587
-mail.from=service@orientdb.com
-mail.username=service@orientdb.com
+mail.smtp.host=192.168.1.230
+mail.smtp.port=25
+mail.from=service@prjhub.com
+mail.username=service@prjhub.com
 mail.password=L4cm_3mDcL_3E
 mock=false
 
