--- a/orientechnologies-website/src/main/resources/mail-test.properties
+++ b/orientechnologies-website/src/main/resources/mail-test.properties
@@ -1,7 +1,7 @@
 mail.protocol=smtp
 mail.host=mail.orientechnologies.com
 mail.port=587
-mail.smtp.auth=true
+mail.smtp.auth=false
 mail.smtp.starttls.enable=true
 mail.smtp.host=mail.orientechnologies.com
 mail.smtp.port=587
