--- a/orientechnologies-website/src/main/resources/mail-development.properties
+++ b/orientechnologies-website/src/main/resources/mail-development.properties
@@ -1,11 +1,14 @@
 mail.protocol=smtp
-mail.host=mail.orientechnologies.com
-mail.port=587
-mail.smtp.auth=true
+mail.host=192.168.1.230
+mail.port=25
+mail.smtp.auth=false
 mail.smtp.starttls.enable=true
-mail.smtp.host=mail.orientechnologies.com
-mail.smtp.port=587
-mail.from=prjhub@orientechnologies.com
-mail.username=prjhub@orientechnologies.com
-mail.password=Prj_Hubb_WoW945
+mail.smtp.host=192.168.1.230
+mail.smtp.port=25
+mail.from=service@prjhub.com
+mail.username=service@prjhub.com
+mail.password=L4cm_3mDcL_3E
 mock=true
+
+
+
